Replaced explicit styles on all binder usercontrol content sections with a reference to a new CSS class now defined in standard.css.  Also revised standard.css to correct a tab layout problem made evident when AjaxControlToolkit was updated to 16.1.

--- a/trunk/OscarDotNet/css/standard.css
+++ b/trunk/OscarDotNet/css/standard.css
@@ -30,6 +30,10 @@
 /*
 ** AJAX__TAB_KI and KI_TAB_BODY (horizontal)
 */
+.ajax__tab_ki .ajax__tab
+  {
+  height: auto !important;
+  }
 .ajax__tab_ki .ajax__tab_header {}
 .ajax__tab_ki .ajax__tab_outer
   {
@@ -59,6 +63,13 @@
   {
   background-color:white;
   font-weight:bold;
+  }
+.ki_tab_body
+  {
+  padding: 4px;
+  border-right: silver thin solid;
+  border-left: silver thin solid;
+  border-bottom: silver thin solid;
   }
 
 /*
